# badger-graph

./: .badger-mcp-config.json  .badgerrc  .gitignore  CLEANUP_HISTORY.md  DEBUG_SUMMARY.md  MCP_CONFIG_EXAMPLE.json  MCP_SETUP.md  README.md  TESTING_FILE_WATCHER.md  TOOL_QUERY_VERIFICATION.md  check_import_predicates.py  cmds.txt  debug_all_imports.py  debug_check_affected.py  debug_dql_query.py  debug_dql_step_by_step.py  debug_imports_raw.py  debug_include_dependencies.py  debug_index_directory.py  debug_module_matching.py  problem_nodes.txt  tasks-full-product.txt  tasks-mvp.txt  test_batching.py  test_current_implementation.py  test_dql_debug.py  test_dql_vs_graphql.py  test_expand_all.py  test_file_contains_import.py  test_get_include_deps.py  test_import_contained_in_file.py  test_matching_direct.py  test_optimized_implementation.py  test_uid_types.py
cli/: .badgerrc  =0.21.0  BadgerREADME.md  DEVELOPMENT.md  MCP_TOOLS_TEST_REPORT.md  README_DEBUG.md  check_mcp_logs.md  conftest.py  debug_mcp_server.sh  diagnose_function_calls.py  mcp_server_with_logging.py  pyproject.toml  reproduce_error.py  requirements.txt  run_mcp_debug.sh  test_mcp_connection.py  test_mcp_fixes.py  test_mcp_server.py  test_mcp_tools.sh
cli/badger/: __init__.py  config.py  main.py
cli/badger/embeddings/: service.py
cli/badger/graph/: __init__.py  builder.py  check_graphql_schema_issue.py  dgraph.py  find_all_imports_comprehensive.py  find_bad_imports.py  find_bad_imports_detailed.py  (+9 more)
cli/graph-viewer/: README.md  app.py
cli/test_code/: async_patterns.py  decorators_callbacks.py
(+92 files in other folders)
